# UnityNanoMesh

./: .gitignore  LICENSE  README.md  README.zh-CN.md
Assets/: InitTestScene639104602117416400.unity  InitTestScene639105644261340011.unity  InitTestScene639106592826691822.unity  InitTestScene639106627443438046.unity  New Material.mat  SmartGIExportSettings.asset  WishGISettings.asset  green.mat
Assets/NanoMesh/: bunny_InstanceB.prefab
Assets/NanoMesh/Editor/: NanoMesh.Editor.asmdef  NanoMeshSettings.asset
Assets/NanoMesh/Editor/Baking/: MeshoptimizerCliNanoMeshBakeBackend.cs  NanoMeshBakeMenu.cs  NanoMeshBaker.cs  NanoMeshSettings.cs
Assets/NanoMesh/Editor/Inspectors/: NanoMeshAssetInspector.cs
Assets/NanoMesh/Editor/Tests/: NanoMesh.Editor.Tests.asmdef  NanoMeshBakerTests.cs  (+1 more)
Assets/NanoMesh/Runtime/: NanoMesh.Runtime.asmdef
Assets/Scenes/: SampleScene.unity
Assets/Settings/: URP-HighFidelity-Renderer.asset
Doc/: 2506.01288v1.md  AdavanceRealtimeRendering_NanoMesh0810.md  siggraph_mmg_2024_SmartGI0722.md
NanoMesh/: Implementation_Steps.md  NanoMesh_Design.md  Step_01_Project_Skeleton.md  Step_02_Bake_Pipeline.md  Step_03_Asset_And_Runtime_Data.md  Step_04_Baseline_Rendering.md  Step_05_Instance_Culling.md  Step_06_Cluster_Culling_And_LOD.md  Step_07_Occlusion_Depth_Pyramid.md  Step_08_Debug_Profiling_And_Hardening.md
Native/: .gitignore
Native/NanoMeshBaker/: CMakeLists.txt
Native/NanoMeshBaker/src/: NanoMeshBakeBackend.cpp  NanoMeshBakeBackend.h  main.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+9 files in other folders)
